@@ -1,1 +1,2 @@
-Initial version
+Fix Crashlytics integration
+
